--- a/src/main/resources/com/example/epitome/view/login.fxml
+++ b/src/main/resources/com/example/epitome/view/login.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.epitome.main">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.epitome.controller.LoginController">
     <left>
         <AnchorPane fx:id="sample1" prefHeight="412.0" prefWidth="282.0" style="-fx-background-color: #0A0000;" BorderPane.alignment="CENTER">
          <children>
